<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ModelProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/photo_iv"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:paddingBottom="8dp"
                android:src="@drawable/default_pic"
            />
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_til"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo_iv"
                android:paddingBottom="8dp"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_til"
                android:paddingBottom="8dp"
                >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_til"
                android:paddingBottom="8dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_til"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_til"
                android:paddingBottom="8dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_age" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/radioLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/age_til"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="78dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/hint_gender" />
                
                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/standard_height"
                    android:layout_weight="2"
                    android:paddingBottom="8dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/radio_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_man"
                        />
                    <RadioButton
                        android:id="@+id/radio_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_woman"
                        />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/apply_button"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/radioLayout"
                style="@style/standard_button"
                android:text="@string/apply_changes_button"
                />
            <Button
                android:id="@+id/signout_button"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/apply_button"
                style="@style/standard_button"
                android:text="@string/sign_out_button"
                />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#aaaaaaaa"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>