<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/email_et_login"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password_et_login"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/hint_password"
        android:inputType="textPassword" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_et_login" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

    <Button
        android:id="@+id/login_button_model"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/standard_button"
        android:onClick="onLoginModel" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_et_login" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:text="@string/button_login_model"/>
    <Button
        android:id="@+id/login_button_company"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/standard_button"
        android:onClick="onLoginCompany" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button_model" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:text="@string/button_login_company"/>


</androidx.constraintlayout.widget.ConstraintLayout>