<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity"
    >

    <EditText
        android:id="@+id/email_et_signup"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password_et_signup"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        android:hint="@string/hint_password"
        android:inputType="textPassword" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_et_signup" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

    <Button
        android:id="@+id/register_button_model"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/standard_button"
        android:onClick="onSignupModel" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_et_signup" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:text="@string/startup_button_register_model"/>

    <Button
        android:id="@+id/register_button_company"
        android:layout_width="@dimen/standard_width"
        android:layout_height="@dimen/standard_height"
        style="@style/standard_button"
        android:onClick="onSignupCompany" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_button_model" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:text="@string/startup_button_register_company"
        android:textSize="18dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>